<resources>
    <string name="app_name">SVSU Room Search</string>

    <!-- Main -->
    <string name="main_thank_you">Thank you for choosing SVSU Room Search.</string>
    <string name="main_prompt">Choose to select your major or directly search for rooms.</string>
    <string name="main_select_major">Select your major.</string>
    <string name="main_search_rooms">Search for rooms.</string>

    <!-- Buttons -->
    <string name="btn_select_major">Select Major</string>
    <string name="btn_search_rooms">Search Rooms</string>
    <string name="btn_display_times">Display Times</string>

    <!-- Select Major -->
    <string name="select_major_prompt">Select your major from the list.</string>
    <string-array name="majors_array">
        <item>CIS</item>
        <item>CS</item>
        <item>CSIS</item>
    </string-array>

    <!-- Search Rooms -->
    <string name="search_rooms_prompt">Search for a room at SVSU.</string>

    <!-- Display Times -->
    <string name="display_times_explanation">The selected room is busy at the times listed below.</string>
</resources>
